@@ -2,6 +2,7 @@ Change log for Bos Wars
 -----------------------
 
 Development version:
+- Added ctrl-shift-t hotkey in the editor to tile the selected patch (Jimmy Salmon)
 - Added patch themes (Jimmy Salmon)
 - Fixed bug #30173: Map editor should require at least one player type to be a person (Jimmy Salmon)
 - Fixed bug #29740: Map editor adds units even if dragging began in the sidebar (Jimmy Salmon)
